adding eslint dependency and its configuration file

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "electron": "^25.5.0"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "@electron-internal/eslint-config": "^1.0.1",
+    "electron-squirrel-startup": "^1.0.0",
+    "eslint": "^8.48.0",
+    "eslint-plugin-node": "^11.1.0"
   }
 }
