--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@electron-forge/maker-squirrel": "^6.3.0",
     "@electron-forge/maker-zip": "^6.3.0",
     "@electron-forge/plugin-auto-unpack-natives": "^6.3.0",
-    "electron": "^25.5.0"
+    "electron": "^25.5.0",
+    "eslint": "^8.48.0",
+    "eslint-plugin-node": "^11.1.0"
   },
   "@electron-internal/eslint-config": "^1.0.1",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0",
-    "eslint": "^8.48.0",
-    "eslint-plugin-node": "^11.1.0"
+    "electron-squirrel-startup": "^1.0.0"
   }
 }
